fix preview issues and set a class for text so it can be truncated when it is too long

--- a/app/components/primer/alpha/text_field.pcss
+++ b/app/components/primer/alpha/text_field.pcss
@@ -266,15 +266,8 @@
     color: var(--fgColor-muted);
     pointer-events: none;
     &:has( .FormControl-input-trailingVisualText) {
-      width: auto;
       max-width: 25%;
       padding-left: var(--base-size-8);
-
-      & .FormControl-input-trailingVisualText {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
     }
   }
   /* TODO: replace with new Button component */
